Consolidate styles and fix word-wrap for old Opera

--- a/themes/blackboard.css
+++ b/themes/blackboard.css
@@ -2,6 +2,7 @@ pre {
     background: #0B1022;
     white-space: pre-wrap;
     white-space: -moz-pre-wrap;
+    white-space: -pre-wrap;
     white-space: -o-pre-wrap;
     word-wrap: break-word;
     margin: 0px;
@@ -40,14 +41,10 @@ pre .parent {
     font-style: italic;
 }
 
-pre .entity {
+pre .entity, pre .meta {
     color: #FF6400;
 }
 
 pre .support {
     color: #8DA6CE;
-}
-
-pre .meta {
-    color: #FF6400;
 }
